seems to be due to a deprecated parameter https://bugs.eclipse.org/bugs/show_bug.cgi?id=310041
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11752 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: ec9b183dd662903cc516740f5d056ed2c8b4d42e

--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -179,28 +179,29 @@
 		           maxmemory="128m"
 		           >
 			<arg value="-application"/>
-			<arg value="org.eclipse.equinox.p2.director"/>
+				<arg value="org.eclipse.equinox.p2.director"/>
 			<arg value="-metadataRepository"/>
-			<arg value="${feature.repository}"/>
+				<arg value="${feature.repository}"/>
 			<arg value="-artifactRepository"/>
-			<arg value="${feature.repository}"/>
+				<arg value="${feature.repository}"/>
 			<arg value="-installIU"/>
-			<arg value="${feature.name}"/>
+				<arg value="${feature.name}"/>
 			<arg value="-destination"/>
-			<arg value="${target.eclipse.dir}/eclipse"/>
+				<arg value="${target.eclipse.dir}/eclipse"/>
 			<arg value="-bundlepool"/>
-			<arg value="${target.eclipse.dir}/eclipse"/>
+				<arg value="${target.eclipse.dir}/eclipse"/>
 			<arg value="-profileProperties"/>
-			<arg value="org.eclipse.update.install.features=true"/>
+				<arg value="org.eclipse.update.install.features=true"/>
 			<arg value="-profile"/>
-			<arg value="${target.profile}"/> 
+				<arg value="${target.profile}"/> 
 			<arg value="-p2.os"/> 
-			<arg value="${target.os}"/> 
+				<arg value="${target.os}"/> 
 			<arg value="-p2.ws"/> 
-			<arg value="${target.ws}"/> 
+				<arg value="${target.ws}"/> 
 			<arg value="-p2.arch"/> 
-			<arg value="${target.arch}"/>
-			<arg value="-shared ${target.eclipse.dir}/eclipse/p2"/>
+				<arg value="${target.arch}"/>
+			<arg value="-shared"/>
+				<arg value="${target.eclipse.dir}/eclipse/p2"/>
 			<jvmarg value="-Declipse.p2.MD5Check=false"/>
 		</java>	
 	</target>
