git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11767 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 863b1d84cc7322e4adbd55a73dcf335191512146

--- a/drools_projects/org.kermeta.smartadapters.diva.toDrools.ui/build.properties
+++ b/drools_projects/org.kermeta.smartadapters.diva.toDrools.ui/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                src/kermeta/,\
                src/model/,\
                icons/
+bin.excludes = src/model/main.kmt
