git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11770 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 0501bd9ee02646abba567453551a0dac5df64c6f

--- a/sitac_projects/org.kermeta.sitac.model/.settings/org.eclipse.core.resources.prefs
+++ b/sitac_projects/org.kermeta.sitac.model/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
-#Mon Jul 05 17:25:56 CEST 2010
+#Tue Jul 06 10:53:40 CEST 2010
 eclipse.preferences.version=1
 encoding/sitac.ecorediag=UTF-8
+encoding/sitacCtrl.ecore=UTF-8
+encoding/sitacCtrl.ecorediag=UTF-8
 encoding/sitacView.ecore=UTF-8
 encoding/sitacView.ecorediag=UTF-8
