added missing feature for scala
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11810 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 6640289f36e988814d0f64aa07b4099fb2e053c2

--- a/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_bases_for_kermeta/build.xml
@@ -136,8 +136,8 @@
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
   		</antcall>
 		<!-- FROM SCALA -->
-		<antcall target="provision_feature">
-    		<param name="feature.name" value="ch.epfl.lamp.sdt.feature.group"/>
+		<antcall target="provision_feature">  
+    		<param name="feature.name" value="ch.epfl.lamp.sdt.feature.group, org.eclipse.contribution.weaving.feature.group"/>
 			<param name="feature.repository" value="${scala.official.repository}"/>
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
   		</antcall>
