--- a/drools_projects/org.kermeta.smartadapters.drools5.diva.standalone/build.properties
+++ b/drools_projects/org.kermeta.smartadapters.drools5.diva.standalone/build.properties
@@ -1,4 +1,3 @@
-source.standalone.jar = src/
 bin.includes = META-INF/,\
                lib/antlr-runtime-3.1.1.jar,\
                lib/core-3.4.2.v_883_R34x.jar,\
@@ -14,4 +13,6 @@ bin.includes = META-INF/,\
                lib/org.eclipse.emf.ecore.xmi_2.5.0.v200906151043.jar,\
                lib/org.kermeta.art.model_1.1.1.jar,\
                lib/sax2.jar,\
-               standalone.jar
+               .
+source.. = src/
+jars.compile.order = .
