folder and plugin id must be equals
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11820 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 0c027c03a08fc88541240b9f09057e72211994a1

--- a/drools_projects/org.kermeta.smartadapters.drools5.diva.standalone/.project
+++ b/drools_projects/org.kermeta.smartadapters.drools5.diva.standalone/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.kermeta.smartadatpers.drools5.diva.standalone</name>
+	<name>org.kermeta.smartadapters.drools5.diva.standalone</name>
 	<comment></comment>
 	<projects>
 	</projects>
