make sure to use Galileo in this special version
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11863 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: c6d4a30f63ee76109b718296440393e2ac718514

--- a/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
@@ -116,15 +116,15 @@
 
 		<mkdir dir="${eclipse.workspace.dir}"/>
 		<antcall target="create_target_base">
-			<param name="eclipse.base.dir" value="${env.WORKSPACE}/eclipse_${eclipse.version.name}_base"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="eclipse.base.dir" value="${env.WORKSPACE}/eclipse_galileo_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
 		</antcall>
 		
 		<!-- get log4j plugin from Kermeta site -->
 		<antcall target="provision_feature">
     		<param name="feature.name" value="org.apache.log4j"/>
 			<param name="feature.repository" value="http://www.kermeta.org/update"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
   		</antcall>
 		
 		<!-- FROM OFFICIAL ECLIPSE UPDATE SITE -->
@@ -133,52 +133,52 @@
 		<antcall target="provision_feature">
     		<param name="feature.name" value="org.eclipse.sdk.feature.group, org.eclipse.emf.sdk.feature.group, org.eclipse.emf.ecoretools.sdk.feature.group, org.eclipse.emf.compare.sdk.feature.group, org.eclipse.wst.xml_ui.feature.feature.group, org.eclipse.emf.compare.sdk.feature.group, org.eclipse.gmf.sdk.feature.group, org.eclipse.jet.sdk.feature.group, org.eclipse.ocl.all.sdk.feature.group, org.eclipse.uml2.sdk.feature.group, org.eclipse.uml2tools.sdk.feature.group, org.eclipse.xsd.sdk.feature.group, org.eclipse.team.svn.feature.group, org.eclipse.xpand.sdk.feature.group, org.eclipse.jdt.feature.group, org.eclipse.zest.feature.group, org.eclipse.stp.sca.feature.feature.group, org.eclipse.stp.sca.feature.xmleditors.feature.group"/>
 			<param name="feature.repository" value="${eclipse.official.repository}"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
   		</antcall>
 		<!-- FROM SCALA -->
 		<antcall target="provision_feature">  
     		<param name="feature.name" value="ch.epfl.lamp.sdt.feature.group, org.eclipse.contribution.weaving.feature.group"/>
 			<param name="feature.repository" value="${scala.official.repository}"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
   		</antcall>
 		
 		<!-- FROM TOPCASED -->
 		<antcall target="provision_feature">
     		<param name="feature.name" value="org.topcased.modeler.uml.feature.group, org.topcased.dependencies.feature.group"/>
 			<param name="feature.repository" value="${topcased.official.repository}"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
   		</antcall>
 		
 		<!-- FIND BUGS -->
 		<antcall target="provision_feature">
     		<param name="feature.name" value="edu.umd.cs.findbugs.plugin.eclipse.feature.group"/>
 			<param name="feature.repository" value="http://findbugs.cs.umd.edu/eclipse"/>
-			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
   		</antcall>
 
 		<!-- FROM EMFTEXT -->
 		<antcall target="provision_feature">
 		    		<param name="feature.name" value="org.emftext.access.feature.group, org.emftext.sdk.feature.group, org.emftext.commons.antlr3_1_1.feature.group"/>
 					<param name="feature.repository" value="http://reuseware.org/update"/>
-					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
 		</antcall>
 		<!-- FROM m2eclipse.sonatype.org -->
 		<antcall target="provision_feature">
 		    		<param name="feature.name" value="org.maven.ide.eclipse.feature.feature.group"/>
 					<param name="feature.repository" value="http://m2eclipse.sonatype.org/sites/m2e"/>
-					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"/>
+					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"/>
 		</antcall>
 		<!-- FROM OTHER UPDATE SITE -->
 
-		<delete file="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base.zip" failonerror="false"/>
-		<zip destfile="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base.zip">
-			<fileset dir="${env.WORKSPACE}/build/kermeta_${eclipse.version.name}_base"></fileset>
+		<delete file="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base.zip" failonerror="false"/>
+		<zip destfile="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base.zip">
+			<fileset dir="${env.WORKSPACE}/build/kermeta_galileo_${eclipse.version.name}_base"></fileset>
 		</zip>
 	</target>
 	<target name="provision_feature" >
 		<echo>Provisionning ${eclipse.version.name} with ${feature.name}</echo>
 		<echo>OS=${target.os}; arch=${target.arch}; ws=${target.ws}; target.profile=${target.profile}</echo>
-		<java jar="${env.WORKSPACE}/eclipse_${eclipse.native.version.name}_base/eclipse/plugins/${equinox.jar}"
+		<java jar="${env.WORKSPACE}/eclipse_galileo_${eclipse.native.version.name}_base/eclipse/plugins/${equinox.jar}"
 		           fork="true"
 		           failonerror="true"
 		           maxmemory="128m"
