git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11869 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 252618abeb4c0769afdc4ad0ceca2423ba8f3a2d

--- a/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
@@ -107,7 +107,7 @@
 	</target>
 
 	<target name="get_dropins">
-		<get src="ftp://ftp.inria.fr/pub/Apache/incubator/aries/org.apache.aries.blueprint-0.1-incubating.jar" 
+		<get src="http://mirror.mkhelif.fr/apache/incubator/aries/org.apache.aries.blueprint-0.1-incubating.jar" 
 							dest="${env.WORKSPACE}/build/dropins/org.apache.aries.blueprint-0.1-incubating.jar"
 							usetimestamp="true"/>
 	</target>
