git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11870 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 2b2543df72103eaf244bbc0daba86d29851b52ae

--- a/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_galileo_bases_for_kermeta/build.xml
@@ -107,6 +107,7 @@
 	</target>
 
 	<target name="get_dropins">
+		<mkdir dir="${env.WORKSPACE}/build/dropins/"/>
 		<get src="http://mirror.mkhelif.fr/apache/incubator/aries/org.apache.aries.blueprint-0.1-incubating.jar" 
 							dest="${env.WORKSPACE}/build/dropins/org.apache.aries.blueprint-0.1-incubating.jar"
 							usetimestamp="true"/>
