--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -5,9 +5,15 @@
     <groupId>org.kermeta.art2</groupId>
     <artifactId>art2.root</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2</version>
     <name>ART2 :: ROOT</name>
     <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <art2.version>2.0.0-SNAPSHOT</art2.version>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -32,10 +38,5 @@
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
-
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
 </project>
