--- a/art2_projects/org.kermeta.art2.annotation/pom.xml
+++ b/art2_projects/org.kermeta.art2.annotation/pom.xml
@@ -3,16 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kermeta.art2</groupId>
+
     <artifactId>art2.annotation</artifactId>
-    <version>1.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>ART2 :: ANNOTATION</name>
+
+    <groupId>${parent.groupId}</groupId>
+    <version>${art2.version}</version>
 
     <parent>
         <artifactId>art2.root</artifactId>
         <groupId>org.kermeta.art2</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2</version>
     </parent>
 
     <build>
@@ -22,24 +24,6 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>2.0.1</version>
                 <extensions>true</extensions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
             </plugin>
         </plugins>
     </build>
