--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -2,45 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kermeta.art2</groupId>
     <artifactId>art2.model</artifactId>
     <name>ART2 :: MODEL</name>
-    <version>1.4.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <repositories>
-        <repository>
-            <id>thirdparty</id>
-            <name>Irisa Tipimouss Nexus ThirdParty</name>
-            <url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/thirdparty</url>
-        </repository>
-        <repository>
-            <id>scala-tools.org</id>
-            <name>Scala-tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </repository>
-        <repository>
-            <id>triskellPublic</id>
-            <url>http://tipimouss.irisa.fr:8081/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
 
+    <groupId>${parent.groupId}</groupId>
+    <version>${art2.version}</version>
 
+    <parent>
+        <artifactId>art2.root</artifactId>
+        <groupId>org.kermeta.art2</groupId>
+        <version>2</version>
+    </parent>
 
 
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
-
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <argLine>-Xmx1024m</argLine>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -63,38 +42,13 @@
             </plugin>
         </plugins>
     </build>
+    
     <dependencies>
         <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>emf</artifactId>
-            <version>3.5.0</version>
+            <groupId>org.kermeta.emf</groupId>
+            <artifactId>emf.lib</artifactId>
+            <version>${emf.version}</version>
         </dependency>
     </dependencies>
-    <properties>
-        <uniqueVersion>false</uniqueVersion>
-    </properties>
 
-
-    <distributionManagement>
-        <repository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local release repository</name>
-            <url>file:/var/www/html/maven2private</url>
-            <uniqueVersion>false</uniqueVersion>
-        </repository>
-        <snapshotRepository>
-            <id>tipimouss-local-maven-repository</id>
-            <name>Tipimouss Local  snapshot repository</name>
-            <url>file:/var/www/html/maven2private-snapshots</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-    </distributionManagement>
-<!--
-    <distributionManagement>
-        <repository>
-            <id>nexus</id>
-            <url>http://tipimouss.irisa.fr:8081/nexus/content/repositories/snapshots</url>
-        </repository>
-    </distributionManagement>
--->
 </project>
