Fix version number for root project
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11901 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 1f6cedbce17669691520d282623ab2e889b75706

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -29,7 +29,7 @@
 				
                 <configuration>
                     <instructions>
-                        <Export-Package>art2,art2.impl,art2.util</Export-Package>
+                        <Export-Package>org.kermeta.art2,org.kermeta.art2.impl,org.kermeta.art2.util</Export-Package>
                         <Import-Package>
 						org.eclipse.emf.*,
 						org.osgi.framework
