--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -80,7 +80,7 @@
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
         <repository>
-            <id>triskellPublic</id>
+            <id>triskellPublicNexus</id>
             <url>http://tipimouss.irisa.fr:8081/nexus/content/groups/public</url>
         </repository>
 
