Fix version number for root project
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11908 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: b77c4c30614f7c5de96d99100b552b7bc0916d2a

--- a/art2_projects/org.kermeta.art2.componentType.parent/pom.xml
+++ b/art2_projects/org.kermeta.art2.componentType.parent/pom.xml
@@ -89,5 +89,10 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${parent.groupId}</groupId>
+            <artifactId>art2.framework</artifactId>
+            <version>${art2.version}</version>
+        </dependency>
     </dependencies>
 </project>
