git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11915 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 800de40fd8dad12833da886901d066cb52a956a1

--- a/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/pom.xml
+++ b/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>tools.simple.maven.osgi.file.deploy</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>Simple.maven.osgi.file.install</name>
+	<name>Simple.maven.osgi.file.deploy</name>
 	<url>http://www.kermeta.org/</url>
 	<inceptionYear>2010</inceptionYear>
 	<licenses>
