improved messages added main-class in the manifest
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11916 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 9daea3626a1c24b6ca2aaa06ae0da471599f629e

--- a/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/pom.xml
+++ b/maventools_projects/org.kermeta.tools.simple.maven.osgi.file.deploy/pom.xml
@@ -2,7 +2,6 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kermeta.tools</groupId>
 	<artifactId>tools.simple.maven.osgi.file.deploy</artifactId>
-	<packaging>jar</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Simple.maven.osgi.file.deploy</name>
 	<url>http://www.kermeta.org/</url>
@@ -38,9 +37,10 @@
 	</dependencies>
 	<build>
 
-		<!-- All plugins must have fixed version numbers to avoid automatic plugin upgrade -->
-
+		
 		<plugins>
+		
+			<!-- Java directives -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -53,16 +53,31 @@
 				</configuration>
 			</plugin>
 
+
+			<!-- Support for development in Eclipse environment  -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.3</version>
 			</plugin>
-
+			
+			<!-- Jar building directives  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<archive>
+			        	<manifest>
+			            	<mainClass>org.kermeta.tools.simple.maven.osgi.file.deploy.CLI</mainClass>			            
+			          	</manifest>          	
+        			</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
 	<properties>
-		<distribution.base>file:/var/www/html/</distribution.base>
+		<distribution.base>file:/var/www/html/</distribution.base>		
 	</properties>
 </project>
