git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@11922 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 60b8b1d6a6956f6daf5f7edd6b7fc332e3ffbb90

--- a/hudson_jobs/eclipse_base_mavenizer/build.xml
+++ b/hudson_jobs/eclipse_base_mavenizer/build.xml
@@ -19,6 +19,7 @@
 	</target>	
 	<target name="get_executable_libs">
 		<echo>Step 1 - Retrieve latest version of the executables</echo>
+		<mkdir dir="${lib.folder}"/>
 		<get src="${simple.maven.osgi.file.deploy.url}" 
 							dest="${lib.folder}/${smofd.jar}"
 							usetimestamp="true"/>
