--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -21,13 +21,14 @@
         <sourceDirectory>src</sourceDirectory>
         <plugins>
 
-	<plugin>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.8</version>
-        <configuration>
-          <pde>true</pde>
-        </configuration>
-      </plugin>
+            <plugin>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <pde>true</pde>
+                </configuration>
+            </plugin>
+
 
 
             <plugin>
@@ -46,9 +47,46 @@
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                     </instructions>
                 </configuration>
-				
-				
+		
             </plugin>
+
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>truezip-maven-plugin</artifactId>
+                <version>1.0-beta-4</version>
+                <executions>
+                    <execution>
+                        <id>copy-out-files</id>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>install</phase>
+                        <configuration>
+                            <verbose>true</verbose>
+
+                            <files>
+                                <file>
+                                    <source>${project.build.outputDirectory}/META-INF/MANIFEST.MF</source>
+                                    <outputDirectory>${project.basedir}/META-INF</outputDirectory>
+                                </file>
+                            </files>
+                            <!--
+                            <filesets>
+                                <fileset>
+                                    <directory>${archive}/META-INF2</directory>
+                                    <outputDirectory>${project.baseUri}/META-INF</outputDirectory>
+                                </fileset>
+                            </filesets>
+-->
+                        </configuration>
+                    </execution>
+
+                </executions>
+            </plugin>
+
+
+            
         </plugins>
     </build>
     
